[project]
name = "context-server"
version = "1.0.1"
description = "MCP server for codebase context optimization with Tree-sitter AST parsing and tiered Claude model routing"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "anthropic>=0.40.0",
    "pathspec>=0.12.0",
    "tiktoken>=0.8.0",
]

[project.scripts]
context-server = "context_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context_server"]
